--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   postgres:
     image: postgres
     environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgtres
+      POSTGRES_USER: user1
+      POSTGRES_PASSWORD: password1
     ports:
       - "5432:5432"
