--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
       "test": "echo \"Error: no test specified\" && exit 1",
       "start": "ts-node src/index.ts",
       "build": "tsc",
+      "dev" : "nodemon -w *.ts src/index.ts",
       "serve": "node dist/app.js",
       "typeorm": "typeorm-ts-node-commonjs"
    },
