--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "react": "^18.3.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/jest": "^29.5.12",
     "@types/react-router-dom": "^5.3.3",
     "@types/supertest": "^6.0.2",
