--- a/huskysheetsui/package.json
+++ b/huskysheetsui/package.json
@@ -11,11 +11,15 @@
     "@types/node": "^16.18.97",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-test-renderer": "^18.3.1",
     "styled-components": "^6.1.11",
+    "ts-jest": "^29.1.4",
     "typescript": "^4.9.5",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
@@ -23,7 +27,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "react-scripts test --transformIgnorePatterns 'node_modules/(?!my-library-dir)/'",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -45,6 +49,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.6",
     "@testing-library/dom": "^10.1.0",
     "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
