--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,8 @@
    "license": "ISC",
    "description": "",
    "dependencies": {
+      "cores": "^0.8.5",
+      "cors": "^2.8.5",
       "express": "^4.19.2",
       "pg": "^8.4.0",
       "reflect-metadata": "^0.1.13",
