--- a/huskysheetsui/tsconfig.json
+++ b/huskysheetsui/tsconfig.json
@@ -22,5 +22,13 @@
   },
   "include": [
     "src"
-  ]
+  ],
+  "jest": {
+    "preset": "ts-jest",
+    "testEnvironment": "node",
+    "transform": {
+      "^.+\\.tsx?$": "ts-jest"
+    }
+  }
+
 }
