--- a/huskysheetsui/package.json
+++ b/huskysheetsui/package.json
@@ -54,6 +54,8 @@
     "@testing-library/react": "^16.0.0",
     "@types/react": "^18.3.3",
     "@types/react-router-dom": "^5.3.3",
-    "@types/uuid": "^9.0.8"
+    "@types/uuid": "^9.0.8",
+    "typescript": "^4.3.5",
+    "ts-node": "^10.0.0"
   }
 }
