--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@types/node": "^20.14.2",
+    "@types/superagent": "^8.1.7",
     "axios": "^1.7.2",
     "react": "^18.3.1"
   },
