--- a/server/docker-compose.yml
+++ b/server/docker-compose.yml
@@ -1,11 +1,21 @@
-## to begin Dockerized database, type 'docker compose up -d'
-
-version: "3"
+version: "3.9"
 services:
+  backend:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    environment:
+      - DATABASE_URL=postgres://user1:password1@postgres:5432/mydatabase
+    ports:
+      - "3002:3002"
+    depends_on:
+      - postgres
+
   postgres:
     image: postgres
     environment:
       POSTGRES_USER: user1
       POSTGRES_PASSWORD: password1
+      POSTGRES_DB: mydatabase
     ports:
       - "5432:5432"
