--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
       "start": "ts-node src/index.ts",
       "build": "tsc",
       "dev": "nodemon -w *.ts src/index.ts",
-      "test": "jest",
+      "test": "jest --watchAll=false",
       "test:watch": "jest --watch",
       "serve": "node dist/app.js",
       "typeorm": "typeorm-ts-node-commonjs"
@@ -29,6 +29,6 @@
       "@types/node": "^16.11.10",
       "@types/uuid": "^9.0.8",
       "ts-node": "10.9.1",
-      "typescript": "4.5.2"
+      "typescript": "^4.5.2"
    }
 }
