--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,16 +1,31 @@
 {
    "compilerOptions": {
-      "lib": [
-         "es5",
-         "es6"
-      ],
-      "target": "es5",
-      "module": "commonjs",
-      "esModuleInterop": true,
-      "moduleResolution": "node",
-      "outDir": "./build",
-      "emitDecoratorMetadata": true,
-      "experimentalDecorators": true,
-      "sourceMap": true
-   }
-}
+     "lib": [
+       "es5",
+       "es6"
+     ],
+     "target": "es6",
+     "module": "commonjs",
+     "esModuleInterop": true,
+     "moduleResolution": "node",
+     "outDir": "./build",
+     "emitDecoratorMetadata": true,
+     "experimentalDecorators": true,
+     "sourceMap": true,
+     "skipLibCheck": true,
+     "types": [
+       "node",
+       "jest",
+       "superagent",
+       "supertest"
+     ]
+   },
+   "include": [
+     "src/**/*.ts",
+     "src/**/*.test.ts"
+   ],
+   "exclude": [
+     "node_modules"
+   ]
+ }
+ 
